feat(common): Remove spring extensively, purify